tests/endtoend/failure/expected/error_get_string.compile.out
error_get_string.silly:2:1: error: Attempted GET to string literal or array?
    2 | GET y;
      | ^
